# Chess

./: .gitignore  Dockerfile  README.md  compose.yaml  conda-spec-file.txt  create_database.py  environment.yml  main.py  play_v_ai.py  pyproject.toml  requirements.txt  scratch.ipynb  setup.py  start_servers.py  train_evaluator.py  train_evaluator_distillation.py  train_feature_extractor.py  train_feature_extractor_distillation.py  train_rl.py
.benchmarks/Linux-CPython-3.8-64bit/: 0001_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241015_160823_uncommited-changes.json  0002_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241015_193618_uncommited-changes.json  0003_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241015_211113_uncommited-changes.json  0004_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241015_212800_uncommited-changes.json  0005_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241015_213031_uncommited-changes.json  0006_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241016_063158_uncommited-changes.json  0007_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241016_063846_uncommited-changes.json  0008_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241016_064402_uncommited-changes.json  0010_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241016_065753_uncommited-changes.json  0011_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241016_160808_uncommited-changes.json  0013_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241017_041735_uncommited-changes.json  0014_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241017_041835_uncommited-changes.json  0015_bf8ea79be3e233bf4cade27715a30dc47a54524c_20241017_041951_uncommited-changes.json  (+20 more)
analysis/: analysis-0201-EnvironmentSetup.md  analysis-0209-DataLoading.md
benchmarks/: conftest.py  test_chunking_benchmark.py  test_training.py
chess/: scripts.py
docs/: index.html
huggingface/: play_v_ai.py  pushmodels.py
learner/: matcher.py  server.py  test.py  train.py
my_chess/: callback.py  dataset.py  environment.py  scripts.py
new_my_chess/: main.py  train_evaluator.py  train_evaluator_distillation.py  train_feature_extractor.py  train_feature_extractor_distillation.py  train_rl.py
plan/: Plan.md  Plan_onhold.md
tests/: __init__.py  conftest.py  test_algorithms.py  test_datasets.py  test_models.py  test_training.py
(+194 files in other folders)
