[tool.poetry]
name = "my_chess"
version = "0.1.0"
description = ""
authors = ["Mark Zimmerman <mzimm003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
chess = "1.10.0"
dm_tree = "0.1.8"
gymnasium = "0.28.1"
h5py = "3.11.0"
lz4 = "4.3.2"
numpy = "1.24.4"
pandas = "1.3.5"
pettingzoo = "1.24.3"
posix_ipc = "1.1.1"
pygame = "2.1.3.dev8"
pytest = {version = "8.2.1", optional = true}
pytest-benchmark = {version = "*", optional = true}
ray = {version = "2.10.0", extras=["tune","rllib"]}
scipy = "1.8.1"
scikit-image = "0.20.0"
torch = "2.0.0"
torchvision = "*"
sphinx = {version = "7.1.2", optional = true}
sphinx_design = {version = "*", optional = true}
sphinxcontrib-bibtex = {version = "*", optional = true}
streamlit = {version = "1.37.0", optional = true}
ml-training-suite = {git = "https://github.com/mzimm003/ML_training_suite"}
quickscript = {git = "https://github.com/mzimm003/quickscript"}

[tool.poetry.extras]
documentation = ["sphinx", "sphinx_design", "sphinxcontrib-bibtex"]
testing = ["pytest"]
benchmarking = ["pytest-benchmark"]
browser = ["streamlit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"